P5 E-learning/force-app/main/default/objects/UnidadUser__c/UnidadUser__c.object-meta.xml
<CustomObject>
    <label>UnidadUser</label>
    <nameField>
        <displayFormat>UU-{0000}</displayFormat>
        <label>UnidadUser Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UnidadesUsers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>