P5 E-learning/force-app/main/default/objects/UnidadUser__c/fields/EstadoUnidad__c.field-meta.xml
<CustomField>
    <fullName>EstadoUnidad__c</fullName>
    <label>EstadoUnidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Answered</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>