P5 E-learning/force-app/main/default/objects/UnidadUser__c/fields/Intento__c.field-meta.xml
<CustomField>
    <fullName>Intento__c</fullName>
    <label>Intento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>