P5 E-learning/force-app/main/default/objects/UnidadUser__c/fields/ModuloUser__c.field-meta.xml
<CustomField>
    <fullName>ModuloUser__c</fullName>
    <label>ModuloUser</label>
    <referenceTo>ModuloUser__c</referenceTo>
    <relationshipLabel>UnidadesUsers</relationshipLabel>
    <relationshipName>UnidadesUsers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>