P5 E-learning/force-app/main/default/objects/UnidadUser__c/fields/Puntos__c.field-meta.xml
<CustomField>
    <fullName>Puntos__c</fullName>
    <label>Puntos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>