P5 E-learning/force-app/main/default/objects/UnidadUser__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidad</label>
    <referenceTo>Unidad__c</referenceTo>
    <relationshipLabel>UnidadesUsers</relationshipLabel>
    <relationshipName>UnidadesUsers</relationshipName>
    <type>Lookup</type>
</CustomField>