P5 E-learning/force-app/main/default/objects/UnidadUser__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ModuloUser__c</columns>
    <columns>NAME</columns>
    <columns>Unidad__c</columns>
    <columns>Puntos__c</columns>
    <columns>EstadoUnidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>